# Polaroid

./: Cargo.toml  build.rs
src/: main.rs
src/app/: action.rs  application.rs  canvas.rs  capture.rs  config.rs  event.rs  graphics.rs  mod.rs  window.rs
src/app/graphics_impl/: mod.rs  opengl_impl.rs
src/app/window_impl/: gif_window.rs  image_window.rs  mod.rs
src/misc/: mod.rs  shortcutkey.rs
src/platform/windows/: capture_impl.rs  mod.rs
src/support/: mod.rs
