[package]
name = "polaroid"
version = "0.0.1"
description = "GIF capture tool"
repository = "https://github.com/yslib/Polaroid"
license = "Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2021"
publish = false

[dependencies]
glutin = "0.28.0"
raw-window-handle = "0.4.2"
takeable-option = "0.4"
image = "0.24"
glm = "0.2.3"
bitflags = "1.3"
log = "0.4.14"
directories = "0.8.0"
chrono = "0.4.19"
tokio = {version = "1.17.0", features=["full"]}

[build-dependencies]
gl_generator = "0.14"

[dependencies.windows]
version = "0.32.0"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange"
]
